<resources>
    <string name="app_name">Bank</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">skip</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">forget password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="create">Create</string>
    <string name="send">send</string>
    <string name="phone_number">phone number</string>
    <string name="bloodtype">bloodType</string>
    <string name="tvchangingpassword">code for changing password</string>
    <string name="confg_code">confg Code</string>
    <string name="new_password">new password</string>
    <string name="renewpassword">re new Password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="tvName">Name</string>
    <string name="Email">Email</string>
    <string name="last_donation_date">Last Donation Date</string>
    <string name="re_password">re Password</string>
    <string name="password">Password</string>
    <string name="phonenumber">Phone Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="about_me">About me</string>
    <string name="favouriteFragment">Favourite</string>
    <string name="using_catalouge">Using Catalouge</string>
    <string name="contact">Contact</string>
    <string name="about_app">About App</string>
    <string name="app_rate">App Rate</string>
    <string name="exit">Exit</string>
    <string name="notification_settings">notif</string>
    <string name="drawer_navigation_open">open navigation drawer</string>
    <string name="drawer_navigation_close">close navigation drawer</string>
    <string name="edit_profile_information">Edit Profile Information</string>
    <string name="save">save</string>
    <string name="age">Age</string>
    <string name="hospital_name">Hospital Name</string>


    <string-array name="nameofboold">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="governorates">governorates</string>
    <string name="blood_types">blood types</string>
</resources>
