<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    tools:context=".ui.fragment.usercycle.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Login_Fragment_rel_cont">

            <ImageView
                android:layout_width="@dimen/dim_21xl"
                android:layout_height="@dimen/dim_21xl"
                android:layout_above="@id/fragment_login_til_phone"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_logo_s" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_login_til_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/dim_l"
                android:layout_marginTop="@dimen/dim_l"
                android:layout_marginEnd="@dimen/dim_l"
                android:background="@drawable/shape_et">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fragment_login_edittext_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/ten"
                    android:background="@null"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textSize="@dimen/textviewssize" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_login_til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_login_til_phone"
                android:layout_marginStart="@dimen/dim_l"
                android:layout_marginTop="@dimen/dim_l"
                android:layout_marginEnd="@dimen/dim_l"
                android:layout_marginBottom="@dimen/txt_size_l"
                android:background="@drawable/shape_et">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fragment_login_edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/ten"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/textviewssize" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/fragment_login_ch_remember"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/txt_size_2xl"
                android:layout_below="@id/fragment_login_til_password"
                android:layout_marginStart="@dimen/ten"
                android:layout_marginTop="@dimen/ten"
                android:text="@string/remember_me" />

            <TextView
                android:id="@+id/fragment_login_tv_forgetpassword"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/txt_size_2xl"
                android:layout_below="@id/fragment_login_til_password"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/ten"
                android:layout_marginEnd="@dimen/ten"
                android:drawableStart="@drawable/ic_problem"
                android:drawablePadding="@dimen/dim_m"
                android:gravity="center"
                android:text="@string/forget_password" />

            <Button
                android:id="@+id/fragment_login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_login_ch_remember"
                android:layout_marginStart="@dimen/dim_l"
                android:layout_marginTop="@dimen/txt_size_5xl"
                android:layout_marginEnd="@dimen/dim_l"
                android:background="@drawable/usercyclebutton"
                android:text="@string/login" />

            <Button
                android:id="@+id/fragment_login_btn_crate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_login_btn_login"
                android:layout_marginStart="@dimen/dim_l"
                android:layout_marginTop="@dimen/dim_l"
                android:layout_marginEnd="@dimen/dim_l"
                android:background="@drawable/usercyclebuttoncreate"
                android:text="@string/create_new_account" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>