<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.usercycle.ForgetPasswordStep2Fragment"
    android:background="@drawable/ic_bg">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/dim_21xl"
                android:id="@+id/fragment_forget_password_step2_img_icon"
                android:layout_height="@dimen/dim_21xl"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:paddingTop="@dimen/txt_size_l"
                android:src="@drawable/ic_logo_s" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="reset your password"
                android:id="@+id/fragment_forget_password_step2_tv_changingpass"
                android:textSize="20sp"
                android:layout_below="@+id/fragment_forget_password_step2_img_icon"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/txt_size_4xl"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_et"
                android:id="@+id/fragment_forget_password_step2_til_configpass"
                android:layout_below="@+id/fragment_forget_password_step2_tv_changingpass"
                android:layout_marginStart="@dimen/txt_size_ss"
                android:layout_marginEnd="@dimen/txt_size_ss"
                android:layout_marginTop="@dimen/txt_size_l">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_xl"
                    android:hint="@string/confg_code"
                    android:layout_marginStart="@dimen/ten"
                    android:padding="4dp"
                    android:textSize="@dimen/dim_l"
                    android:id="@+id/fragment_forget_password_ed_configpass"
                    android:background="@null"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_et"
                android:id="@+id/fragment_forget_password_step2_til_newpassword"
                android:layout_below="@+id/fragment_forget_password_step2_til_configpass"
                android:layout_marginStart="@dimen/txt_size_ss"
                android:layout_marginEnd="@dimen/txt_size_ss"
                android:layout_marginTop="@dimen/txt_size_l">                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_xl"
                    android:hint="@string/new_password"
                    android:layout_marginStart="@dimen/ten"
                    android:textSize="@dimen/dim_l"
                    android:id="@+id/fragment_forget_password_step2_ed_newpassword"
                    android:background="@null"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_et"
                android:id="@+id/fragment_forget_password_step2_til_renewpassword"
                android:layout_below="@+id/fragment_forget_password_step2_til_newpassword"
                android:layout_marginStart="@dimen/txt_size_ss"
                android:layout_marginEnd="@dimen/txt_size_ss"
                android:layout_marginTop="@dimen/txt_size_l">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_xl"
                    android:hint="@string/renewpassword"
                    android:layout_marginStart="@dimen/txt_size_s"
                    android:textSize="@dimen/dim_l"
                    android:id="@+id/fragment_forget_password_step2_ed_renewpassword"
                    android:background="@null"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_forget_password_step2_btn_confirmchanging"
                android:layout_marginStart="@dimen/txt_size_ss"
                android:layout_marginEnd="@dimen/txt_size_ss"
                android:text="@string/confirm_new_password"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/thirty"
                android:textSize="18sp"
                android:background="@drawable/usercyclebutton"
                android:layout_below="@id/fragment_forget_password_step2_til_renewpassword"
                android:textColor="@color/white"/>

        </RelativeLayout>
    </ScrollView>



</RelativeLayout>